[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-hub-mcp"
version = "0.1.0"
description = "MCP server exposing strands-hub registry, prompts, sessions, and metrics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Du'An Lightfoot" }
]
dependencies = [
  "mcp>=1.0.0",
  "boto3>=1.34.0",
  "strands-hub @ git+https://github.com/labeveryday/strands-hub.git",
]

[project.scripts]
strands-hub-mcp = "strands_hub_mcp.server:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands_hub_mcp"]
